[gd_scene load_steps=17 format=3 uid="uid://dh6om46glx45v"]

[ext_resource type="Script" path="res://addons/skein/editor/GraphEdit.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/skein/dialog_box/BaseOptionButton.tscn" id="3"]
[ext_resource type="Script" path="res://addons/skein/editor/SkeinEditor.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://dyh4pj2rpgd6c" path="res://addons/skein/dialog_box/BaseDialogBox.tscn" id="5"]
[ext_resource type="Script" path="res://addons/skein/editor/Tree.gd" id="6"]
[ext_resource type="Script" path="res://addons/skein/utils/MenuButton.gd" id="7"]

[sub_resource type="Image" id="Image_n48wf"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 167, 167, 167, 6, 224, 224, 224, 114, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 223, 223, 223, 56, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 59, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 187, 111, 111, 111, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 236, 223, 223, 223, 83, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 57, 56, 56, 56, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 49, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 223, 223, 223, 60, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 60, 167, 167, 167, 6, 224, 224, 224, 114, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 128, 224, 224, 224, 114, 167, 167, 167, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id="12"]
image = SubResource("Image_n48wf")

[sub_resource type="Image" id="Image_e2u4o"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 178, 178, 178, 0, 178, 178, 178, 0, 188, 188, 188, 0, 213, 213, 213, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 223, 223, 223, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 178, 178, 178, 0, 178, 178, 178, 60, 178, 178, 178, 201, 188, 188, 188, 255, 213, 213, 213, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 201, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 179, 179, 179, 0, 179, 179, 179, 199, 207, 207, 207, 200, 211, 211, 211, 255, 189, 189, 189, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 199, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 180, 180, 180, 255, 180, 180, 180, 255, 180, 180, 180, 255, 180, 180, 180, 255, 180, 180, 180, 255, 202, 202, 202, 0, 224, 224, 224, 0, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 180, 180, 180, 255, 180, 180, 180, 255, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 0, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 180, 180, 180, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 179, 179, 179, 0, 179, 179, 179, 200, 206, 206, 206, 196, 211, 211, 211, 255, 189, 189, 189, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 200, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 178, 178, 178, 0, 178, 178, 178, 60, 179, 179, 179, 202, 188, 188, 188, 255, 213, 213, 213, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 201, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 178, 178, 178, 0, 179, 179, 179, 0, 188, 188, 188, 0, 213, 213, 213, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 224, 224, 224, 0, 223, 223, 223, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="34"]
image = SubResource("Image_e2u4o")

[sub_resource type="Image" id="Image_kvsg2"]
data = {
"data": PackedByteArray(166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 56, 56, 56, 0, 167, 167, 167, 38, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 166, 166, 166, 19, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 112, 112, 112, 0, 224, 224, 224, 128, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 56, 56, 56, 0, 167, 167, 167, 26, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 164, 164, 164, 13, 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 112, 112, 112, 0, 0, 0, 0, 0, 0, 0, 0, 0, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 222, 222, 222, 57, 111, 111, 111, 0, 222, 222, 222, 57, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 166, 166, 166, 19, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 190, 222, 222, 222, 0, 223, 223, 223, 190, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 63, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 221, 221, 221, 38, 110, 110, 110, 0, 221, 221, 221, 38, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 164, 164, 164, 13, 166, 166, 166, 19, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 223, 223, 223, 77, 167, 167, 167, 38, 0, 0, 0, 0, 222, 222, 222, 63, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 128, 0, 0, 0, 0, 164, 164, 164, 13, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 222, 222, 222, 51, 167, 167, 167, 26, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id="18"]
image = SubResource("Image_kvsg2")

[sub_resource type="Image" id="Image_abvax"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 221, 221, 221, 0, 223, 223, 223, 0, 224, 224, 224, 0, 224, 224, 224, 0, 223, 223, 223, 0, 0, 0, 0, 0, 221, 221, 221, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 221, 221, 221, 23, 223, 223, 223, 226, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 232, 222, 222, 222, 0, 221, 221, 221, 75, 223, 223, 223, 252, 223, 223, 223, 200, 223, 223, 223, 112, 218, 218, 218, 14, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 222, 222, 222, 47, 223, 223, 223, 252, 224, 224, 224, 255, 223, 223, 223, 242, 222, 222, 222, 0, 221, 221, 221, 75, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 241, 223, 223, 223, 90, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 221, 221, 221, 92, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 220, 220, 220, 0, 221, 221, 221, 0, 222, 222, 222, 0, 220, 220, 220, 66, 223, 223, 223, 168, 224, 224, 224, 255, 223, 223, 223, 251, 221, 221, 221, 84, 219, 219, 219, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 24, 223, 223, 223, 238, 223, 223, 223, 250, 222, 222, 222, 103, 223, 223, 223, 242, 218, 218, 218, 7, 218, 218, 218, 0, 0, 0, 0, 0, 220, 220, 220, 0, 223, 223, 223, 0, 223, 223, 223, 105, 224, 224, 224, 255, 223, 223, 223, 249, 218, 218, 218, 28, 218, 218, 218, 0, 222, 222, 222, 0, 222, 222, 222, 110, 224, 224, 224, 255, 223, 223, 223, 137, 222, 222, 222, 0, 221, 221, 221, 69, 215, 215, 215, 13, 215, 215, 215, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 167, 224, 224, 224, 255, 222, 222, 222, 125, 222, 222, 222, 0, 222, 222, 222, 0, 222, 222, 222, 182, 224, 224, 224, 255, 223, 223, 223, 40, 223, 223, 223, 0, 221, 221, 221, 0, 215, 215, 215, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 219, 219, 219, 0, 219, 219, 219, 50, 224, 224, 224, 255, 223, 223, 223, 211, 223, 223, 223, 0, 222, 222, 222, 0, 222, 222, 222, 223, 223, 223, 223, 251, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 170, 170, 170, 0, 170, 170, 170, 3, 222, 222, 222, 247, 223, 223, 223, 228, 223, 223, 223, 0, 222, 222, 222, 0, 222, 222, 222, 215, 223, 223, 223, 248, 127, 127, 127, 2, 127, 127, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 205, 205, 205, 0, 223, 223, 223, 249, 223, 223, 223, 237, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 194, 224, 224, 224, 255, 223, 223, 223, 49, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 223, 223, 223, 0, 223, 223, 223, 32, 224, 224, 224, 255, 223, 223, 223, 197, 223, 223, 223, 0, 221, 221, 221, 0, 221, 221, 221, 100, 224, 224, 224, 255, 222, 222, 222, 166, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 67, 221, 221, 221, 0, 223, 223, 223, 120, 224, 224, 224, 255, 223, 223, 223, 128, 223, 223, 223, 0, 204, 204, 204, 0, 204, 204, 204, 10, 223, 223, 223, 233, 224, 224, 224, 255, 223, 223, 223, 105, 223, 223, 223, 0, 221, 221, 221, 0, 127, 127, 127, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 228, 222, 222, 222, 78, 223, 223, 223, 241, 223, 223, 223, 246, 217, 217, 217, 34, 217, 217, 217, 0, 0, 0, 0, 0, 213, 213, 213, 0, 223, 223, 223, 49, 222, 222, 222, 239, 224, 224, 224, 255, 223, 223, 223, 170, 221, 221, 221, 68, 127, 127, 127, 2, 174, 174, 174, 0, 223, 223, 223, 0, 223, 223, 223, 230, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 115, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 57, 223, 223, 223, 219, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 100, 222, 222, 222, 0, 223, 223, 223, 220, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 69, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 222, 222, 222, 78, 222, 222, 222, 183, 223, 223, 223, 204, 223, 223, 223, 80, 223, 223, 223, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 238, 221, 221, 221, 38, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 223, 223, 223, 0, 224, 224, 224, 0, 224, 224, 224, 0, 223, 223, 223, 0, 221, 221, 221, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="26"]
image = SubResource("Image_abvax")

[node name="SkeinEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("4")

[node name="AutoSave" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanelSplit" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 238

[node name="LeftSidebar" type="Control" parent="LeftPanelSplit"]
layout_mode = 2

[node name="Panel" type="Panel" parent="LeftPanelSplit/LeftSidebar"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Toolbar" type="HBoxContainer" parent="LeftPanelSplit/LeftSidebar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Control" type="Control" parent="LeftPanelSplit/LeftSidebar/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Refresh" type="Button" parent="LeftPanelSplit/LeftSidebar/Toolbar"]
layout_mode = 2
text = ""
flat = true

[node name="Tree" type="Tree" parent="LeftPanelSplit/LeftSidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
script = ExtResource("6")
folder_icon = SubResource("12")
file_icon = SubResource("34")
card_icon = SubResource("18")

[node name="RightPanelSplit" type="HSplitContainer" parent="LeftPanelSplit"]
layout_mode = 2
split_offset = 1183

[node name="GraphContainer" type="Control" parent="LeftPanelSplit/RightPanelSplit"]
layout_mode = 2

[node name="GraphEdit" type="GraphEdit" parent="LeftPanelSplit/RightPanelSplit/GraphContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2(-250, -4)
snapping_distance = 10
zoom_min = 0.1
zoom_max = 5.0
zoom_step = 1.1
show_zoom_label = true
script = ExtResource("1")

[node name="GraphToolbar" type="Control" parent="LeftPanelSplit/RightPanelSplit/GraphContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ToggleLeftPanel" type="Button" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
text = ""
flat = true

[node name="ZoomContainer" type="MarginContainer" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_stretch_ratio = 0.14

[node name="_ZoomContainer" type="Control" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox/ZoomContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox/ZoomContainer/_ZoomContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 3.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsMenu" type="MenuButton" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
text = "Settings"
script = ExtResource("7")

[node name="ToolsMenu" type="MenuButton" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
visible = false
layout_mode = 2
focus_mode = 2
text = "Tools"
script = ExtResource("7")

[node name="Run" type="Button" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
text = "Run"
flat = true

[node name="PlayButton" type="Button" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
text = ""
flat = true

[node name="StopButton" type="Button" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
visible = false
layout_mode = 2
text = ""
flat = true

[node name="Spacer" type="Control" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Search" type="LineEdit" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="ToggleRightPanel" type="Button" parent="LeftPanelSplit/RightPanelSplit/GraphContainer/GraphToolbar/HBox"]
layout_mode = 2
text = ""
flat = true

[node name="RightSidebar" type="Control" parent="LeftPanelSplit/RightPanelSplit"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="LeftPanelSplit/RightPanelSplit/RightSidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -864.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="LeftPanelSplit/RightPanelSplit/RightSidebar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Control" type="Control" parent="LeftPanelSplit/RightPanelSplit/RightSidebar/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Refresh" type="Button" parent="LeftPanelSplit/RightPanelSplit/RightSidebar/Toolbar"]
visible = false
layout_mode = 2
tooltip_text = "Refresh"
icon = SubResource("26")

[node name="Control" type="Control" parent="LeftPanelSplit/RightPanelSplit/RightSidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ConfirmClear" type="ConfirmationDialog" parent="."]
dialog_text = "Really clear all nodes?"

[node name="ConfirmDelete" type="ConfirmationDialog" parent="."]
size = Vector2i(285, 100)
dialog_text = "Really delete conversation?"

[node name="ConfirmationDimmer" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Preview" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Dimmer" type="Panel" parent="Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Preview"]
layout_mode = 0
offset_left = 102.0
offset_top = 109.0
offset_right = 320.0
offset_bottom = 149.0

[node name="Stop" parent="Preview/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2
text = "Stop"

[node name="Next" parent="Preview/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2
toggle_mode = true
text = "Next"

[node name="Debug" parent="Preview/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2
toggle_mode = true
text = "Debug"

[node name="DialogBox" parent="Preview" instance=ExtResource("5")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
option_button_path = "res://addons/skein/dialog_box/BaseOptionButton.tscn"
primary_action = "ui_accept"
secondary_action = "ui_cancel"
direct_input = true
text_cooldown = 0.05
